--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -12,6 +12,30 @@ spring:
       ddl-auto: none
     show-sql: true
 
+  # การตั้งค่าสำหรับการส่งอีเมล
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: your-email@gmail.com
+    password: your-app-password
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+
+  # การตั้งค่า Thymeleaf สำหรับเทมเพลตอีเมล
+  thymeleaf:
+    cache: false
+    prefix: classpath:/templates/
+    suffix: .html
+    encoding: UTF-8
+    mode: HTML
+    servlet:
+      content-type: text/html
+
 flyway:
   enabled: true
   schemas: auth
@@ -22,9 +46,16 @@ jwt:
   expirationMs: 900000         # 15 minutes
   refreshExpirationMs: 604800000 # 7 days
 
+# การตั้งค่าแอพพลิเคชัน
+app:
+  name: YIP E-INVENTORY
+  version: 1.0.0
+  description: ระบบจัดการคลังสินค้าและทรัพยากร
+
 logging:
   level:
     root: INFO
+    com.yipintsoi: DEBUG
 
 management:
   endpoints:
