edit auth add single session

--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -25,6 +25,7 @@
         <lombok.version>1.18.30</lombok.version>
         <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
         <resilience4j.version>2.0.2</resilience4j.version>
+        <flyway.version>10.10.0</flyway.version> <!-- Updated Flyway version -->
     </properties>
 
     <dependencies>
@@ -60,6 +61,14 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
+            <version>${flyway.version}</version> <!-- Explicit version -->
+        </dependency>
+
+        <!-- PostgreSQL extension for Flyway -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+            <version>${flyway.version}</version>
         </dependency>
 
         <!-- Lombok -->
