add kafka, redis

--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,4 +1,15 @@
+FROM openjdk:21-jdk-slim as builder
+WORKDIR /app
+COPY . .
+RUN ./mvnw clean package -DskipTests
+
 FROM openjdk:21-jdk-slim
-VOLUME /tmp
-COPY target/auth-service-0.0.1-SNAPSHOT.jar auth-service.jar
-ENTRYPOINT ["java", "-jar", "/auth-service.jar"]
+WORKDIR /app
+COPY --from=builder /app/target/auth-service-0.0.1-SNAPSHOT.jar app.jar
+
+# ใส่ healthcheck ใน Dockerfile
+HEALTHCHECK --interval=30s --timeout=3s --retries=3 \
+  CMD curl -f http://localhost:8081/actuator/health || exit 1
+
+EXPOSE 8081
+ENTRYPOINT ["java", "-jar", "app.jar"]
